# silk-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  TODO.txt  template_app.rs  tmp.rs
assets/shaders/: primitive.wgsl  rotate90.wgsl  sdf_gen.wgsl  text.wgsl
my_app/: Cargo.toml
my_app/src/: main.rs
res/images/: cursor.qoi  iris.qoi  spark.qoi  spiral.qoi  temp.qoi
res/shaders/: batch.wgsl  font-sdf.wgsl  fxaa.wgsl  render.wgsl  screen.wgsl  shader.wgsl  test.frag  test.vert
silk_engine/: Cargo.toml
silk_engine/src/: bmp.rs  buddy_alloc.rs  engine.rs  event.rs  gfx.rs  input.rs  lib.rs  midi.rs  prelude.rs  print.rs  qoi.rs  rand.rs  sfx.rs  util.rs  vulkan.rs  window.rs
silk_engine/src/gfx/: batch_renderer.rs  draw_context.rs  font.rs  image_loader.rs  packer.rs  render_context.rs  render_ctx.rs  renderer.rs  shader.rs  texture_atlas.rs  unit.rs  vertex.rs  vulkan.rs
silk_engine/src/gfx/vulkan/: buffer_alloc.rs  cmd_alloc.rs  cmd_manager.rs  config.rs  desc_alloc.rs  ds_alloc.rs  dsl_manager.rs  gpu.rs  gpu_alloc.rs  image.rs  instance.rs  pipeline.rs  pipeline_layout_manager.rs  render_pass.rs  sampler_manager.rs
silk_engine/src/util/: alloc.rs  bmp.rs  bounding_range.rs  buddy_alloc.rs  contain_range.rs  cooldown.rs  dirty.rs  ema.rs  font.rs  image_loader.rs  mem.rs  noise.rs  print.rs  qoi.rs  rand.rs  reader.rs  tracked.rs  ttf.rs  vec.rs  wav.rs  writer.rs
silk_engine/src/vulkan/: alloc.rs  alloc_callback.rs  buffer.rs  command_manager.rs  command_pool.rs  device.rs  ds_alloc.rs  dsl_manager.rs  image.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  raytrace.rs  sampler_manager.rs  shader.rs  surface.rs  swapchain.rs  window.rs
src/: app.rs  assets.rs  buffer_alloc.rs  cmd_alloc.rs  cooldown.rs  desc_alloc.rs  dsl_manager.rs  gfx.rs  gpu_alloc.rs  input.rs  main.rs  pipeline.rs  pipeline_layout_manager.rs  print.rs  render_context.rs  renderer.rs  shader.rs  util.rs  vulkan.rs  window.rs
src/app/: renderer.rs  simple_app.rs
src/app/renderer/: atlas.rs  font.rs  image.rs  instance.rs
src/gfx/: pipeline.rs  render_context.rs  renderer.rs  shader.rs  vulkan.rs
src/gfx/vulkan/: buffer_alloc.rs  cmd_alloc.rs  config.rs  debug_marker.rs  desc_alloc.rs  dsl_manager.rs  gpu.rs  instance.rs  pipeline.rs  pipeline_layout_manager.rs  render_pass.rs
src/renderer/: atlas.rs  font.rs  instance.rs
src/shaders/: primitive_2d.wgsl
