[package]
name = "silk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
easy-signed-distance-field = { version = "0.1.1", features = ["font"] }
image = { version = "0.24.7", features = ["png", "jpeg", "qoi"] }
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
