[package]
name = "silk-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.14.0", features = [ "derive" ] }
image = { version = "0.24.7", features = ["png", "jpeg", "qoi"] }
owned_ttf_parser = "0.20.0"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["macros", "sync", "rt-multi-thread"] }
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
