[package]
name = "my_app"
version = "0.1.0"
edition = "2024"
description = "test app for silk engine"
authors = ["GeorgeAzma"]
repository = "https://github.com/GeorgeAzma/silk-engine"
license = "MIT"

[dependencies]
inline_tweak = { version = "1.2.4", features = ["derive"] }
silk_engine = { path = "../silk_engine" }
