[package]
name = "silk_engine"
version = "0.1.0"
edition = "2021"
description = "Simple and efficient 2D rendering engine"
authors = ["GeorgeAzma"]
repository = "https://github.com/GeorgeAzma/silk-engine"
license = "MIT"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
lazy_static = "1.5.0"
naga = { version = "23.0.0", features = ["spv-in", "spv-out", "wgsl-in"] }
winit = { version = "0.30.5", features = ["rwh_06"] }
