[package]
name = "silk_engine"
version = "0.1.0"
edition = "2024"
description = "Simple and efficient 2D rendering engine"
authors = ["GeorgeAzma"]
repository = "https://github.com/GeorgeAzma/silk-engine"
license = "MIT"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
cpal = "0.15.3"
naga = { version = "24.0.0", features = ["spv-in", "spv-out", "wgsl-in"] }
winit = { version = "0.30.9", features = ["rwh_06"] }
