[package]
name = "silk_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
cpal = "0.17.1"
rspirv-reflect = "0.9.0"
shaderc = "0.10.1"

[target.'cfg(windows)'.dependencies]
winit = { version = "0.30.12", default-features = false, features = ["rwh_06"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30.12", default-features = false, features = [
    "rwh_06",
    "x11",
    "wayland",
] }
